# uiuc_incas_server/models/actor_message_edge.py
@@ -1,0 +1,36 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from uiuc_incas_server.models.base_model_ import Model
+from uiuc_incas_server import util
+
+
+class ActorMessageEdge(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self):  # noqa: E501
+        """ActorMessageEdge - a model defined in Swagger
+
+        """
+        self.swagger_types = {
+        }
+
+        self.attribute_map = {
+        }
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'ActorMessageEdge':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The ActorMessageEdge of this ActorMessageEdge.  # noqa: E501
+        :rtype: ActorMessageEdge
+        """
+        return util.deserialize_model(dikt, cls)
